# 3DEngine

./: CMakeLists.txt  README.md  imgui.ini
Libraries/includes/GLFW/: glfw3.h
Libraries/includes/glad/: glad.h
assests/: colgate.glb
shaders/: fragment.glsl
src/: camera.cpp  camera.h  glad.c  globals.cpp  globals.h  imgui_impl.cpp  imgui_impl.h  input.cpp  input.h  main.cpp  main1.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  structures.h  texture.cpp
